@@ -11,10 +11,11 @@ public class filterevennumbers {
         System.out.println(evenNumbers);
 
              numbers.stream().filter(n->n%2==0).toList().forEach(System.out::println);
+            // numbers.stream().filter(n-> n/n==1).toList().forEach(System.out::println);
 
              int[] arr={1,2,4,5,2,4};
              List<Integer> duplicates=Arrays.stream(arr).boxed().distinct().toList();
-        System.out.println(duplicates);
+        System.out.println(duplicates+"wew");
 
         Optional<Integer> max=numbers.stream().max(Integer::compareTo);
         System.out.println(max);
@@ -22,16 +23,17 @@ public class filterevennumbers {
         Optional<Integer> maximumnumber=numbers.stream().max(Integer::compare);
         System.out.println(maximumnumber);
 
-        List<Integer> sortedList=numbers.stream().sorted().distinct().collect(Collectors.toList());
+        List<Integer> sortedList=numbers.stream().sorted().distinct().toList();
         System.out.println(sortedList);
 
         int sum=numbers.stream().mapToInt(Integer::intValue).sum();
         System.out.println(sum);
 
         int totalsum=numbers.stream().reduce(0,Integer::sum);
-        System.out.println(totalsum);
+        System.out.println(totalsum+":totalsum");
 
         List<String> letters=Arrays.asList("tesla","alice","wonderland","assets");
+        System.out.println(letters.stream().collect(Collectors.groupingBy(String::length)).entrySet().stream().max(Map.Entry.comparingByKey()).get().getValue()+"highh");
         List<String> uppercase=letters.stream().map(String::toUpperCase).toList();
         System.out.println(uppercase);
 
@@ -45,6 +47,7 @@ public class filterevennumbers {
             Optional<Integer> i=numbers.stream().findFirst();
         System.out.println(i);
 
+
         List<List<Integer>> flatmap=Arrays.asList(Arrays.asList(1,2,5),Arrays.asList(2,6,4));
 
         List<Integer> afterflatmap=flatmap.stream().flatMap(List::stream).toList();
@@ -56,6 +59,6 @@ public class filterevennumbers {
 
 //        -------------------------------------------
             List<Integer> integers=Arrays.asList(12,11,24,46,75,15);
-            integers.stream().map(s->s+"").filter(s->s.startsWith("1")).forEach(System.out::println);
+            integers.stream().map(s->s+"").filter(s->s.startsWith("1")).toList().forEach(System.out::println);
     }
 }
